--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,4 +11,5 @@ jobs:
       - name: Validate Terraform
         run: |
           terraform init
+          terraform fmt
           terraform validate
